--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 *{
-    
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+}
+
+header {
+    padding: 5px 0;
+    background-color: #2f3640;
+    color: #f5f6fa;
+}
+
+header h1{
+    margin: 24px;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header li {
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline;
+    margin-left: 16px;
+    font-weight: normal;
+}
+
+header li a {
+    color: #f5f6fa;
+    text-decoration: none;
+}
+
+.container {
+    width: 1366px;
+    margin: 0;
 }
