--- a/style.css
+++ b/style.css
@@ -89,6 +89,49 @@ section p{
     text-decoration: none;
 }
 
+#contato .container {
+    display: block;
+}
+
+form input,
+form textarea,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea {
+    resize: none;
+    height: 180px;
+}
+
+section h3{
+    margin-bottom: 16px;
+}
+
+form button {
+    background-color: #2f3640;
+    color: #f5f6fa;
+    border: none;
+    cursor: pointer;
+}
+
+form  button:hover{
+    background-color: #404143;
+}
+
+input:focus, textarea:focus{
+    outline-color: #2f3640;
+}
+
+footer{
+    background-color: #2f3640;
+    color: #f5f6fa;
+    padding: 16px 0;
+}
+
 
 
 
